math-core/tests/snapshots/wiki_test__wiki206.snap
---
source: math-core/tests/wiki_test.rs
expression: α π
---
<math>
    <mi>α</mi>
    <mi>π</mi>
</math>
