math-core/tests/snapshots/wiki_test__wiki207.snap
---
source: math-core/tests/wiki_test.rs
expression: ax^2 + bx + c = 0
---
<math>
    <mi>a</mi>
    <msup>
        <mi>x</mi>
        <mn>2</mn>
    </msup>
    <mo>+</mo>
    <mi>b</mi>
    <mi>x</mi>
    <mo>+</mo>
    <mi>c</mi>
    <mo>=</mo>
    <mn>0</mn>
</math>
