math-core/tests/snapshots/wiki_test__wiki208.snap
---
source: math-core/tests/wiki_test.rs
expression: "x=\\frac{-b\\pm\\sqrt{b^2-4ac}}{2a}"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mfrac>
        <mrow>
            <mo lspace="0" rspace="0">−</mo>
            <mi>b</mi>
            <mo>±</mo>
            <msqrt>
                <mrow>
                    <msup>
                        <mi>b</mi>
                        <mn>2</mn>
                    </msup>
                    <mo>−</mo>
                    <mn>4</mn>
                    <mi>a</mi>
                    <mi>c</mi>
                </mrow>
            </msqrt>
        </mrow>
        <mrow>
            <mn>2</mn>
            <mi>a</mi>
        </mrow>
    </mfrac>
</math>
