math-core/tests/snapshots/wiki_test__wiki209.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\left( \\frac{\\left(3-x\\right) \\times 2}{3-x} \\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mfrac>
            <mrow>
                <mrow>
                    <mo>(</mo>
                    <mrow>
                        <mn>3</mn>
                        <mo>−</mo>
                        <mi>x</mi>
                    </mrow>
                    <mo>)</mo>
                </mrow>
                <mo>×</mo>
                <mn>2</mn>
            </mrow>
            <mrow>
                <mn>3</mn>
                <mo>−</mo>
                <mi>x</mi>
            </mrow>
        </mfrac>
        <mo>)</mo>
    </mrow>
</math>
