math-core/tests/snapshots/wiki_test__wiki212.snap
---
source: math-core/tests/wiki_test.rs
expression: "|\\bar{z}| = |z|, |(\\bar{z})^n| = |z|^n, \\arg(z^n) = n \\arg(z)"
---
<math>
    <mi>|</mi>
    <mover accent="true">
        <mi>z</mi>
        <mo stretchy="false">¯</mo>
    </mover>
    <mi>|</mi>
    <mo>=</mo>
    <mi>|</mi>
    <mi>z</mi>
    <mi>|</mi>
    <mo>,</mo>
    <mi>|</mi>
    <mo stretchy="false">(</mo>
    <mover accent="true">
        <mi>z</mi>
        <mo stretchy="false">¯</mo>
    </mover>
    <msup>
        <mo stretchy="false">)</mo>
        <mi>n</mi>
    </msup>
    <mi>|</mi>
    <mo>=</mo>
    <mi>|</mi>
    <mi>z</mi>
    <msup>
        <mi>|</mi>
        <mi>n</mi>
    </msup>
    <mo>,</mo>
    <mo lspace="0" rspace="0">arg</mo>
    <mo stretchy="false">(</mo>
    <msup>
        <mi>z</mi>
        <mi>n</mi>
    </msup>
    <mo stretchy="false">)</mo>
    <mo>=</mo>
    <mi>n</mi>
    <mo lspace="0.1667em" rspace="0">arg</mo>
    <mo stretchy="false">(</mo>
    <mi>z</mi>
    <mo stretchy="false">)</mo>
</math>
