math-core/tests/snapshots/wiki_test__wiki215.snap
---
source: math-core/tests/wiki_test.rs
expression: "{}_pF_q(a_1,\\dots,a_p;c_1,\\dots,c_q;z) = \\sum_{n=0}^\\infty \\frac{(a_1)_n\\cdots(a_p)_n} {(c_1)_n\\cdots(c_q)_n}\\frac{z^n}{n!}"
---
<math>
    <msub>
        <mrow>
        </mrow>
        <mi>p</mi>
    </msub>
    <msub>
        <mi>F</mi>
        <mi>q</mi>
    </msub>
    <mo stretchy="false">(</mo>
    <msub>
        <mi>a</mi>
        <mn>1</mn>
    </msub>
    <mo>,</mo>
    <mrow>
        <mspace width="0.16666667em"/>
        <mo lspace="0">.</mo>
        <mo lspace="0">.</mo>
        <mo lspace="0" rspace="0">.</mo>
        <mspace width="0.16666667em"/>
    </mrow>
    <mo>,</mo>
    <msub>
        <mi>a</mi>
        <mi>p</mi>
    </msub>
    <mo>;</mo>
    <msub>
        <mi>c</mi>
        <mn>1</mn>
    </msub>
    <mo>,</mo>
    <mrow>
        <mspace width="0.16666667em"/>
        <mo lspace="0">.</mo>
        <mo lspace="0">.</mo>
        <mo lspace="0" rspace="0">.</mo>
        <mspace width="0.16666667em"/>
    </mrow>
    <mo>,</mo>
    <msub>
        <mi>c</mi>
        <mi>q</mi>
    </msub>
    <mo>;</mo>
    <mi>z</mi>
    <mo stretchy="false">)</mo>
    <mo>=</mo>
    <munderover>
        <mo lspace="0">∑</mo>
        <mrow>
            <mi>n</mi>
            <mo lspace="0" rspace="0">=</mo>
            <mn>0</mn>
        </mrow>
        <mi>∞</mi>
    </munderover>
    <mfrac>
        <mrow>
            <mo stretchy="false">(</mo>
            <msub>
                <mi>a</mi>
                <mn>1</mn>
            </msub>
            <msub>
                <mo stretchy="false">)</mo>
                <mi>n</mi>
            </msub>
            <mrow>
                <mspace width="0.16666667em"/>
                <mo lspace="0" rspace="0">·</mo>
                <mo>·</mo>
                <mo lspace="0" rspace="0">·</mo>
                <mspace width="0.16666667em"/>
            </mrow>
            <mo stretchy="false">(</mo>
            <msub>
                <mi>a</mi>
                <mi>p</mi>
            </msub>
            <msub>
                <mo stretchy="false">)</mo>
                <mi>n</mi>
            </msub>
        </mrow>
        <mrow>
            <mo stretchy="false">(</mo>
            <msub>
                <mi>c</mi>
                <mn>1</mn>
            </msub>
            <msub>
                <mo stretchy="false">)</mo>
                <mi>n</mi>
            </msub>
            <mrow>
                <mspace width="0.16666667em"/>
                <mo lspace="0" rspace="0">·</mo>
                <mo>·</mo>
                <mo lspace="0" rspace="0">·</mo>
                <mspace width="0.16666667em"/>
            </mrow>
            <mo stretchy="false">(</mo>
            <msub>
                <mi>c</mi>
                <mi>q</mi>
            </msub>
            <msub>
                <mo stretchy="false">)</mo>
                <mi>n</mi>
            </msub>
        </mrow>
    </mfrac>
    <mfrac>
        <msup>
            <mi>z</mi>
            <mi>n</mi>
        </msup>
        <mrow>
            <mi>n</mi>
            <mo>!</mo>
        </mrow>
    </mfrac>
</math>
