math-core/tests/snapshots/wiki_test__wiki216.snap
---
source: math-core/tests/wiki_test.rs
expression: "S=dD\\sin\\alpha"
---
<math>
    <mi>S</mi>
    <mo>=</mo>
    <mi>d</mi>
    <mi>D</mi>
    <mo lspace="0.1667em" rspace="0.1667em">sin</mo>
    <mi>α</mi>
</math>
