math-core/tests/snapshots/wiki_test__wiki217.snap
---
source: math-core/tests/wiki_test.rs
expression: "V = \\frac{1}{6} \\pi h \\left [ 3 \\left ( r_1^2 + r_2^2 \\right ) + h^2 \\right ]"
---
<math>
    <mi>V</mi>
    <mo>=</mo>
    <mfrac>
        <mn>1</mn>
        <mn>6</mn>
    </mfrac>
    <mi>π</mi>
    <mi>h</mi>
    <mrow>
        <mo>[</mo>
        <mrow>
            <mn>3</mn>
            <mrow>
                <mo>(</mo>
                <mrow>
                    <msubsup>
                        <mi>r</mi>
                        <mn>1</mn>
                        <mn>2</mn>
                    </msubsup>
                    <mo>+</mo>
                    <msubsup>
                        <mi>r</mi>
                        <mn>2</mn>
                        <mn>2</mn>
                    </msubsup>
                </mrow>
                <mo>)</mo>
            </mrow>
            <mo>+</mo>
            <msup>
                <mi>h</mi>
                <mn>2</mn>
            </msup>
        </mrow>
        <mo>]</mo>
    </mrow>
</math>
